--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'UA-180756202-1');
 </script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Erin Loves Coasters</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
