fix formatting and typos

--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -12,6 +12,7 @@
   gtag('config', 'UA-180756202-1');
 </script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Acknowledgements</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -53,7 +54,7 @@ div.c {
 
 <br><br>Lastly, I used a few online resources to give me some refreshers on HTML/CSS. The main one was <a href = "https://www.w3schools.com/html/" style="color: #27F5CA;">w3schools</a>. Check it out for examples of the numerous HTML tags and how to get started designing a website.
 
-<br><br>Any coaster stats in my trip reports or elswhere were taken from <a href = "https://www.rcdb.com/" style="color: #27F5CA;">Roller Coaster DataBase</a></p>
+<br><br>Any coaster stats in my trip reports or elsewhere were taken from <a href = "https://www.rcdb.com/" style="color: #27F5CA;">Roller Coaster DataBase</a></p>
 
 
 </ul><br>
