--- a/sfgam2019.html
+++ b/sfgam2019.html
@@ -12,6 +12,7 @@
   gtag('config', 'UA-180756202-1');
 </script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>2019 Day at SFGAM</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
@@ -48,7 +49,7 @@ div.c {
 <h3>My first visit to SFGAM in August 2019 started out rough, but turned out very well due to the use of a Platinum Flash Pass.</h3><br>
 
 <h2>Overview</h2>
-<p>I was very excited when my parents told me 2 weeks in advance that we'd be spending a day at this park. I had been following the construction updates and opening of Maxx Force, and couldn't wait to ride it! We got to the park at opening, but Maxx Force was closed at that time. So, we collected our Platinum Flash Pass and headed to Whizzer, which was also not running. My brother and I settled for Superman Ultimate Flight instead, and waited through a delay to get on our first coaster. Going forward, every coaster I went to ride was open. My ride totals were: 4 on Raging Bull, 3 on Goliath, 2 on X-Flight, and one each on Maxx Force, Superman, Batman, Whizzer, Demon, Dark Knight, Joker, Vertical Velocity, Viper, and American Eagle (blue side). I was impressed with the size, cleanliness, and coaster selection here. The weather was beautiful on our visit, and the park way busy but not packed. We finished riding coasters at 7:30PM and left around 8. As of 2020, Six Flags Great America is a top 3 park for me.  </p>
+<p>I was very excited when my parents told me 2 weeks in advance that we'd be spending a day at this park. I had been following the construction updates and opening of Maxx Force, and couldn't wait to ride it! We got to the park at opening, but Maxx Force was closed at that time. So, we collected our Platinum Flash Pass and headed to Whizzer, which was also not running. My brother and I settled for Superman Ultimate Flight instead, and waited through a delay to get on our first coaster. Going forward, every coaster I went to ride was open. My ride totals were: 4 on Raging Bull, 3 on Goliath, 2 on X-Flight, and one each on Maxx Force, Superman, Batman, Whizzer, Demon, Dark Knight, Joker, Vertical Velocity, Viper, and American Eagle (blue side). I was impressed with the size, cleanliness, and coaster selection here. The weather was beautiful on our visit, and the park was busy but not packed. We finished riding coasters at 7:30PM and left around 8. As of 2020, Six Flags Great America is a top 3 park for me.  </p>
 
 <br><h2>Coasters</h2>
 <p>Here are my thoughts on the coasters from best to worst. I did not have high hopes for <b>Raging Bull</b>. I was shocked at how amazing this coaster was from the crazy out-of-your-seat drop (in the back row, this is my favorite drop currently), good pacing, roaring speed, and those amazing B&M clamshell restraints. Despite the trims, I got at least 5 really great sustained airtime moments in addition to the drop each time I rode. Raging Bull wasn't as good in a middle row, but still had airtime. My one criticism was the ending - Raging Bull meandered around a bit, so it would've benefited from being cut a tad shorter or having an alternate ending. I suspect this B&M hyper will be in my top 10 for many years to come. My dad and one of my brothers both rode the "big 4" coasters at SFGAM and concluded that Raging Bull was their favorite. <br><br>
@@ -63,7 +64,7 @@ Probably the biggest surprise of the day was <b>American Eagle</b>. When I watch
 
 It was nice to ride another <b>Superman Ultimate Flight</b> clone. I found the restraints to be more awkward than on my previous rides on B&M flyers, especially hanging out on the brake run in the prone position. I still really enjoy this coaster model for the pretzel loop and doing maneuvers in close proximity to the track. I truly think riding a B&M flying coaster like this one is the closest I will feel to flying unless I go skydiving someday. <br><br>
 
-After a somewhat disappointing ride on Wicked Twister, I was not expecting much from <b>Vertical Velocity</b>. I was pleasantly surprised. I rode in the back row, and really enjoyed the frefall from the straight spike multiple times. The launch was also fun, although my dad still thinks Steel Venom at Geauga Lake was better. <br><br>
+After a somewhat disappointing ride on Wicked Twister, I was not expecting much from <b>Vertical Velocity</b>. I was pleasantly surprised. I rode in the back row, and really enjoyed the freefall from the straight spike multiple times. The launch was also fun, although my dad still thinks Steel Venom at Geauga Lake was better. <br><br>
 
 <b>Viper</b> was a bit of a letdown. It was not as smooth as expected, and I was not too thrilled by the cookie cutter layout. There were some good airtime moments, and the shade from  the shed surrounding the brake run was nice. This was a good woodie that did not wow me. <br><br>
 
