--- a/laronde2016.html
+++ b/laronde2016.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-180756202-1');
 </script>
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 <style>
