--- a/rankings.html
+++ b/rankings.html
@@ -12,6 +12,7 @@
   gtag('config', 'UA-180756202-1');
 </script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Erin's Rankings</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
