--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -50,7 +50,7 @@ div.c {
 
 <p>Thank you to my family members for allowing me to follow this coaster hobby by taking me to parks on family vacations. While my whole family has fun when we go to an amusement park for the day, I know that not everyone enjoys the rides as much as I do. I apperciate my family members' willingness to go with me and often ride coasters that they might not do if I wasn't a coaster enthusiast.
 
-<br><br>Next, I would especially like to thank my brother for designing the snazzy Erin Loves Coasters logo at the top of every page. He also helped me improve this website from being "bare-bones", taught me how to update it, and provided good advice on formatting and layout. He offered to make this site more professional, but I'm satisfied with how it looks currently. Thanks for your time and input dude!
+<br><br>Next, I would especially like to thank my brother for designing the snazzy Erin Loves Coasters logo at the top of every page. He also helped me improve this website from being "bare-bones," taught me how to update it, and provided good advice on formatting and layout. He offered to make this site more professional, but I'm satisfied with how it looks currently. Thanks for your time and input dude!
 
 <br><br>Lastly, I gratefully used a few online resources to give me some refreshers on HTML/CSS. The main one was <a href = "https://www.w3schools.com/html/" style="color: #27F5CA;">w3schools</a>. Check it out for examples of the numerous HTML tags and how to get started designing a website.
 
