update Cedar Point page

--- a/cp2019.html
+++ b/cp2019.html
@@ -73,9 +73,9 @@ The final B&M coaster at Cedar Point, <b>Raptor</b>, is my 7th favorite coaster 
 
 The last Cedar Point coaster to make my <a href="top50.html" style="color: #27F5CA;">top 50</a> is Magnum XL-200. Contrary to most enthusiasts, I enjoyed the first half of this coaster more even though the pacing was worse. The second half in the back row was far too rough to enjoy. I don't care how great the airtime is if it's unbearably painful. I did like the first half up until the turn around though, and I give Arrow Dynamics credit for building a classic, record-breaking coaster that has kind of withstood the test of time. <br><br>
 
-Speaking of classic coasters, PTC's <b>Blue Streak</b> clocks in at my #10 spot at Cedar Point. For a smoother experience, it's better to sit in the middle row of a 3-row car. Riding Blue Streak always brings a smile to my face. It delivers thrills and airtime, and is a great in-between coaster for kids and adults I appreciate that Cedar Point has taken care of this classic woodie.<br><br> 
+Speaking of classic coasters, PTC's <b>Blue Streak</b> clocks in at my #10 spot at Cedar Point. For a smoother experience, it's better to sit in the middle row of a 3-row car. Riding Blue Streak always brings a smile to my face. It delivers thrills and airtime, and is a great in-between coaster for kids and adults. I appreciate that Cedar Point has taken care of this classic woodie.<br><br> 
 
-<b>Wicked Twister</b> was a coaster that I didn't like too much. I enjoyed the launch, but the twisted spikes were rough, disorienting, and caused head-banging. While the stats look good and this coaster is photogenic, I look for Cedar Point to scrap or relocate it. <br><br>
+<b>Wicked Twister</b> was a coaster that I didn't like too much. I enjoyed the launch, but the twisted spikes were rough, disorienting, and caused head-banging. While the stats look good and this coaster is photogenic, I look for Cedar Fair to scrap or relocate it. <br><br>
 
 Although short, <b>Corkscrew</b> gave a better ride experience than I expected. It was smooth for an Arrow Looper, had pleasant inversions, and played a big role in Cedar Point's history. <br><br>
 
@@ -85,13 +85,13 @@ I'm not going to comment much on the "bottom of the barrel" coasters at Cedar Po
 </p>
 
 <br><h2>Other Rides</h2>
-<p>My favorite flat ride was <b>Skyhawk</b>. I found its swings to be thrilling and restraints to be comfortable. We also rode <b>maXair</b>, Cedar Point's typical discus ride, <b>Pipe Scream</b>, a family ride that was more fun than expected, and <b>Windseeker</b>, which might be the tallest flat ride I've done and had nice views. On our last day, we took the cable cars along the midway for some nice photo opportunities. We also rode the train just because. Additionally, Cedar Point has a drop tower and shoot the chute.</p>
+<p>My favorite flat ride was <b>Skyhawk</b>. I found its swings to be thrilling and restraints to be comfortable. We also rode <b>maXair</b>, Cedar Point's typical discus ride, <b>Pipe Scream</b>, a family ride that was more fun than expected, and <b>Windseeker</b>, which might be the tallest flat ride I've done and had nice views. On our last day, we took the cable cars along the midway for some nice photo opportunities. We also rode the train just because. Additionally, Cedar Point has a drop tower, shoot the chute, and plenty of kiddie rides.</p>
 
 <br><h2>Food & Merchandise</h2>
 <p>At the park, we ate at <b>Chick-fil-A</b>, <b>Hugo's Italian Kitchen</b>, and <b>Melt Bar and Grilled</b>. My favorite of those was Melt. We got terriffic service, and the food was fresh, delicious, and generously portioned. Additionally, we at at Perkins, TGI Friday's, and Tomo Hibachi Grill located inside Hotel Breakers. I did all of my shopping at Pagoda Gift Shop, where I bought 3 t-shirts. Cedar Point has some of the best merchandise. </p>
 
 <br><h2>Cost</h2>
-<p>The 4-night/3-day stay at Hotel Breakers and admission to Cedar Point cost over $1200, which I split with my friend. This price was steep, but it was convenient to stay on-site because we didn't have a rental car. The food was marked up 60% or so. For example, my usual meal at my college Chick-fil-A cost $7.02, but was $11.63 at Cedar Point. My three shirts were $59.75 combined. When factoring in transportation costs, the trip cost me nearly $330 per night. I was able and willing to pay a premium to visit Cedar Point this time, but that might not alway be the case. It's worth noting that we also had access to multiple pools, the beach, and Cedar Point Shores included in our package, but we spent all of our time at the dry park.</p>
+<p>The 4-night/3-day stay at Hotel Breakers and admission to Cedar Point cost over $1200, which I split with my friend. This price was steep, but it was convenient to stay on-site because we didn't have a rental car. The food was marked up 60% or so. For example, my usual meal at my college Chick-fil-A cost $7.02, but was $11.63 at Cedar Point. My three shirts were $59.75 combined. When factoring in transportation, the trip cost me nearly $330 per night. I was able and willing to pay a premium to visit Cedar Point this time, but that might not alway be the case. It's worth noting that we also had access to multiple pools, the beach, and Cedar Point Shores included in our package, but we spent all of our time at the dry park.</p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.</p>
