add upcoming trips

--- a/trips.html
+++ b/trips.html
@@ -54,6 +54,8 @@ div.c {
 <a href="sfgam2019.html" style="color: #27F5CA;">Six Flags Great America 8/1/2019</a><br>
 <a href="kemah2020.html" style="color: #27F5CA;">Kemah Boardwalk 9/18/2020</a><br>
 <a href="pp2020.html" style="color: #27F5CA;">Pleasure Pier 9/19/2020</a><br>
+Kings Island - COMING SOON!!!<br>
+Carowinds - COMING SOON!!!<br>
 
 </div>
 </body>
