Update pages after KI trip

--- a/topparks.html
+++ b/topparks.html
@@ -14,7 +14,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Erin's Favorite Parks</title>
+<title>Erin's Favorite Parks in 2020</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 <style>
 div {
@@ -34,7 +34,7 @@ div.c {
 
 <div>
 <center><img src = "erinlovescoasters_white.png" height = 100></center>
-<center><h1>My Top 10 Amusement Parks</h1></center>
+<center><h1>My Top 10 Amusement Parks (2020)</h1></center>
 
 <div class="c">
 <nav><center>
@@ -46,7 +46,7 @@ div.c {
 </center></nav></div><br>
 
 
-<h3>This is a list of my 10 favorite parks and the year of my most recent visit.</h3>
+<h3>This is a list of my 10 favorite parks and the year of my most recent visit. ***This page is outdated. Click <a href= "topparks21.html" style="color: #27F5CA;">here</a> to view my current list of top parks.</h3>
 
 <ol>
 <li>Cedar Point (2019) </li>
