--- a/allparks.html
+++ b/allparks.html
@@ -56,6 +56,7 @@ div.c {
 <li>Hersheypark - 2010</li>
 <li>Houston Rodeo - 2009 </li>
 <li>Kemah Boardwalk - 2007, 2014, <a href="kemah2020.html" style="color: #27F5CA;">2020</a></li>
+<li>Kings Island - <a href="ki2021.html" style="color: #27F5CA;">2021</a></li>
 <li>La Ronde - <a href="laronde2016.html" style="color: #27F5CA;">2016</a></li>
 <li>Michigan's Adventure - 2008, <a href="michigan2017.html" style="color: #27F5CA;">2017</a></li>
 <li>Montgomery County Fair - 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014</li>
