--- a/trips.html
+++ b/trips.html
@@ -46,16 +46,16 @@ div.c {
 
 <h3>Here you will find trip reports dating back to 2016.</h3>
 
-<a href="laronde2016.html" style="color: #27F5CA;">La Ronde 8/5/2016</a><br>
-<a href="vegas2017.html" style="color: #27F5CA;">New York-New York Hotel and Casino 6/5/2017</a><br>
-<a href="michigan2017.html" style="color: #27F5CA;">Michigan's Adventure 8/5/2017</a><br>
-<a href="thorpe2018.html" style="color: #27F5CA;">Thorpe Park 8/2/2018</a><br>
-<a href="cp2019.html" style="color: #27F5CA;">Cedar Point 5/27/2019-5/29/2019</a><br>
-<a href="sfgam2019.html" style="color: #27F5CA;">Six Flags Great America 8/1/2019</a><br>
-<a href="kemah2020.html" style="color: #27F5CA;">Kemah Boardwalk 9/18/2020</a><br>
-<a href="pp2020.html" style="color: #27F5CA;">Pleasure Pier 9/19/2020</a><br>
-Kings Island - COMING SOON!!!<br>
 Carowinds - COMING SOON!!!<br>
+<a href="ki2021.html" style="color: #27F5CA;">Kings Island 6/17/2021</a><br>
+<a href="pp2020.html" style="color: #27F5CA;">Pleasure Pier 9/19/2020</a><br>
+<a href="kemah2020.html" style="color: #27F5CA;">Kemah Boardwalk 9/18/2020</a><br>
+<a href="sfgam2019.html" style="color: #27F5CA;">Six Flags Great America 8/1/2019</a><br>
+<a href="cp2019.html" style="color: #27F5CA;">Cedar Point 5/27/2019-5/29/2019</a><br>
+<a href="thorpe2018.html" style="color: #27F5CA;">Thorpe Park 8/2/2018</a><br>
+<a href="michigan2017.html" style="color: #27F5CA;">Michigan's Adventure 8/5/2017</a><br>
+<a href="vegas2017.html" style="color: #27F5CA;">New York-New York Hotel and Casino 6/5/2017</a><br>
+<a href="laronde2016.html" style="color: #27F5CA;">La Ronde 8/5/2016</a><br>
 
 </div>
 </body>
