update fast pass page

--- a/fastpass.html
+++ b/fastpass.html
@@ -59,7 +59,7 @@ div.c {
 <p>Obviously, amusement parks are busiest on weekends. Due to my work schedule though, Fridays-Sundays are usually when I'm able to go to parks unless I'm vacationing with my family. If I know ahead of time that I'll be visiting a park over a weekend in the summer or on a holiday, then I'll consider buying the Fast Pass in advance.</p>
 
 <br><h3>What is the system like?</h3>
-<p>So far, I have skipped the lines at Walt Disney World, Thorpe Park, Six Flags Magic Mountain, and Six Flags Great America. It is important to do research about the cost, shareability, eligible rides, and other restrictions for each line-skipping system. Of the places I've used a Fast Pass at, Six Flags does it best in my opinion.</p>
+<p>So far, I have skipped the lines at Walt Disney World, Thorpe Park, Six Flags Magic Mountain, Six Flags Great America, and Kings Island. It is important to do research about the cost, shareability, eligible rides, and other restrictions for each line-skipping system. Of the places I've used a Fast Pass, Six Flags does it best in my opinion.</p>
 
 <br><h3>How likely am I to revisit in the upcoming years?</h3>
 <p> The location of parks also plays a critical role in my decision to skip lines. For places in my home state or near extended family, I have yet to purchase a Fast Pass or equivalent. On the other hand, if the park is on a different continent, remote, or located in a city that I don't think I'll get back to anytime soon, then I'll consider skipping lines.</p> <br> 
