attempt to ebug KI photos

--- a/ki2021.html
+++ b/ki2021.html
@@ -82,18 +82,18 @@ div.c {
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me or my mom. Please credit this website if used.</p>
-<center><img src="IMG_7127.jpg" width="306">
-<img src="IMG_7136.jpg" width="306">
-<img src="IMG_7128.jpg" width="306">
+<center><img src="IMG_7127.JPG" width="306">
+<img src="IMG_7136.JPG" width="306">
+<img src="IMG_7128.JPG" width="306">
 <img src="IMG_7137.jpg" width="306">
-<img src="IMG_7146.jpg" height = "408">
-<img src="IMG_7148.jpg" width="306">
-<img src="IMG_7150.jpg" width="306">
-<img src="IMG_7151.jpg" width="306">
-<img src="IMG_7152.jpg" width="306">
+<img src="IMG_7146.JPG" height = "408">
+<img src="IMG_7148.JPG" width="306">
+<img src="IMG_7150.JPG" width="306">
+<img src="IMG_7151.JPG" width="306">
+<img src="IMG_7152.JPG" width="306">
 <img src="IMG_7167.jpg" width="306">
 <img src="IMG_7198.jpg" width="306">
-<img src="IMG_7153.jpg" width="408">
+<img src="IMG_7153.JPG" width="408">
 <img src="IMG_1884.jpg" width="408">
 <img src="IMG_7196.jpg" width="408"></center>
 
