--- a/allparks.html
+++ b/allparks.html
@@ -51,6 +51,7 @@ div.c {
 
 <ul>
 <li>Canada's Wonderland - 2012 </li>
+<li>Carowinds - <a href="carowinds21.html" style="color: #27F5CA;">2021</a></li>
 <li>Cedar Point - 2009, <a href="cp2019.html" style="color: #27F5CA;">2019</a> </li>
 <li>Geauga Lake - 2005 </li>
 <li>Hersheypark - 2010</li>
