--- a/fastpass.html
+++ b/fastpass.html
@@ -52,17 +52,17 @@ div.c {
 <br><h3>How many coasters are there?</h3>
 <p>If the amusement park is small, say 5 coasters or less, then I should easily be able to get a good number of rides on everything pending normal weather and crowd levels. I'm more tempted to skip the lines at larger parks, especially if I want re-rides.</p>
 
-<br><h3>How long am I visiting for?</h3>
+<br><h3>How long am I visiting?</h3>
 <p>If I'm planning to spend multiple days at an amusement park, then I am less inclined to skip the lines. Going for more than a day provides a cushion for inclement weather and big crowds, making the Fast Pass or equivalent unnecessary in most cases. On the contrary, if I only have part of a day, then I will try to make the most of my time and skipping the lines could be a good idea.</p>
 
 <br><h3>On what day(s) of the week am I visiting?</h3>
 <p>Obviously, amusement parks are busiest on weekends. Due to my work schedule though, Fridays-Sundays are usually when I'm able to go to parks unless I'm vacationing with my family. If I know ahead of time that I'll be visiting a park over a weekend in the summer or on a holiday, then I'll consider buying the Fast Pass in advance.</p>
 
 <br><h3>What is the system like?</h3>
-<p>So far, I have skipped the lines at Walt Disney World, Thorpe Park, Six Flags Magic Mountain, Six Flags Great America, and Kings Island. It is important to do research about the cost, shareability, eligible rides, and other restrictions for each line-skipping system. Of the places I've used a Fast Pass, Six Flags does it best in my opinion.</p>
+<p>So far, I have skipped the lines at Walt Disney World, Thorpe Park, Six Flags Magic Mountain, Six Flags Great America, Kings Island, and Carowinds  . It is important to do research about the cost, shareability, eligible rides, and other restrictions for each line-skipping system. Of the places I've used a Fast Pass, Six Flags does it best in my opinion.</p>
 
 <br><h3>How likely am I to revisit in the upcoming years?</h3>
-<p> The location of parks also plays a critical role in my decision to skip lines. For places in my home state or near extended family, I have yet to purchase a Fast Pass or equivalent. On the other hand, if the park is on a different continent, remote, or located in a city that I don't think I'll get back to anytime soon, then I'll consider skipping lines.</p> <br> 
+<p>The location of parks also plays a critical role in my decision to skip lines. For places in my home state or near extended family, I have yet to purchase a Fast Pass or equivalent. On the other hand, if the park is on a different continent, remote, or located in a city that I don't think I'll get back to anytime soon, then I'll consider skipping lines.</p> <br> 
 
 </div>
 </body>
