--- a/ki2021.html
+++ b/ki2021.html
@@ -72,7 +72,7 @@ div.c {
 <br><br>From best to worst, the remaining 3 roller coasters I rode at Kings Island were <b>Adventure Express</b>, <b>Woodstock Express</b>, and <b>Flying Ace Aerial Chase</b>.    </p>
 
 <br><h2>Other Rides</h2>
-<p>In addition to coasters, Kings Islad has some flat rides and water rides. Their Planet Snoopy area looked really good too. I didn't try any flat/water/kidedie rides. My mom insisted that we do the train ride, <b>K.I. & Miami Valley Railroad</b>. It picked up near Mystic Timbers, had some nice views of Diamondback, and stopped once near the waterpark. This attraction was a nice break from the sunshine and coaster-riding.</p>
+<p>In addition to coasters, Kings Islad has some flat rides and water rides. Their Planet Snoopy area looked really good too. I didn't try any flat/water/kiddie rides. My mom insisted that we do the train ride, <b>K.I. & Miami Valley Railroad</b>. It picked up near Mystic Timbers, had some nice views of Diamondback, and stopped once near the waterpark. This attraction was a nice break from the sunshine and coaster-riding.</p>
 
 <br><h2>Food & Merchandise</h2>
 <p>My mom and I had soft pretzels and ice cream (from Chick-fil-A since my pitch for blue ice cream was turned down) in the park. Both food lines took a long time and so-so employees ran the shops. We opted to eat dinner after we left Kings Island. I bought a t-shirt with my 5 favorite coasters on it from Coaster Connection. I thought their selection was just okay.</p>
