--- a/other.html
+++ b/other.html
@@ -47,6 +47,7 @@ div.c {
 
 <h3>Here you will find more tips, opinions, and information.</h3>
 
+<a href="tips.html" style="color: #27F5CA;">Tips for Visiting Amusement Parks</a><br>
 <a href="fastpass.html" style="color: #27F5CA;">To Skip or Not to Skip the Lines</a><br>
 <a href="allparks.html" style="color: #27F5CA;">Every Park I've Visited</a><br>
 <a href="acknowledgements.html" style="color: #27F5CA;">Acknowledgements</a><br>
