--- a/top5021.html
+++ b/top5021.html
@@ -46,10 +46,11 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 30% of all coasters I've ridden.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 28% of all coasters I've ridden.</h3>
 
 
 <ol>
+<li>Fury 325 - Carowinds </li>
 <li>Millennium Force - Cedar Point </li>
 <li>Top Thrill Dragster - Cedar Point </li>
 <li>Steel Vengeance - Cedar Point </li>
@@ -64,6 +65,7 @@ div.c {
 <li>Maxx Force - Six Flags Great America</li>
 <li>Shivering Timbers - Michigan's Adventure</li>
 <li>Leviathan - Canada's Wonderland</li>
+<li>Copperhead Strike - Carowinds</li>
 <li>Iron Rattler - Six Flags Fiesta Texas</li>
 <li>Behemoth - Canada's Wonderland</li>
 <li>Storm Runner - Hersheypark</li>
@@ -73,9 +75,11 @@ div.c {
 <li>Goliath - Six Flags Great America</li>
 <li>Riddler's Revenge - Six Flags Magic Mountain</li>
 <li>Boardwalk Bullet - Kemah Boardwalk</li>
+<li>Intimidator - Carowinds</li>
 <li>X-Flight - Six Flags Great America</li>
 <li>The Swarm - Thorpe Park</li>
 <li>Lightning Racer - Hersheypark</li>
+<li>Afterburn - Carowinds</li>
 <li>American Eagle - Six Flags Great America</li>
 <li>Diamondback - Kings Island </li>
 <li>Colossus - Thorpe Park</li>
@@ -86,6 +90,7 @@ div.c {
 <li>Maverick - Cedar Point</li>
 <li>Superman Ultimate Flight - 2 parks </li>
 <li>Deja Vu - Six Flags Magic Mountain</li>
+<li>Nighthawk - Carowinds</li>
 <li>Mystic Timbers - Kings Island </li>
 <li>Goliath - La Ronde</li>
 <li>Le Monstre - La Ronde</li>
@@ -95,11 +100,11 @@ div.c {
 <li>B&M Batman clones - 6 parks</li>
 <li>Magnum XL-200 - Cedar Point</li>
 <li>Nemesis Inferno - Thorpe Park</li>
-<li>Iron Shark - Pleasure Pier</li>
+<!--<li>Iron Shark - Pleasure Pier</li>
 <li>Titan - Six Flags Over Texas & Goliath - Six Flags Magic Mountain </li>
 <li>Rock 'n' Roller Coaster - Walt Disney World (Disney's Hollywood Studios)</li>
 <li>Mind Bender - Six Flags Over Georgia</li>
-<li>Thunderhawk - Michigan's Adventure</li>
+<li>Thunderhawk - Michigan's Adventure</li>-->
 
 
 </ol><br>
