--- a/topparks21.html
+++ b/topparks21.html
@@ -53,12 +53,13 @@ div.c {
 <li>Kings Island (2021) </li>
 <li>Six Flags Magic Mountain (2011) </li>
 <li>Six Flags Great America (2019) </li>
+<li>Carowinds (2021) </li>
 <li>Six Flags Fiesta Texas (2014)</li>
 <li>Hersheypark (2010) </li>
 <li>Six Flags Over Georgia (2010) </li>
 <li>Six Flags Over Texas (2007) </li>
 <li>Canada's Wonderland (2012)</li>
-<li>Thorpe Park (2018) </li>
+<!--<li>Thorpe Park (2018) </li>-->
 
 </ol>
 
