--- a/trips.html
+++ b/trips.html
@@ -46,7 +46,7 @@ div.c {
 
 <h3>Here you will find trip reports dating back to 2016.</h3>
 
-Carowinds - COMING SOON!!!<br>
+<a href="carowinds21.html" style="color: #27F5CA;">Carowinds 6/28/2021-6/29/2021</a><br>
 <a href="ki2021.html" style="color: #27F5CA;">Kings Island 6/17/2021</a><br>
 <a href="pp2020.html" style="color: #27F5CA;">Pleasure Pier 9/19/2020</a><br>
 <a href="kemah2020.html" style="color: #27F5CA;">Kemah Boardwalk 9/18/2020</a><br>
