update after San Antonio trip

--- a/allparks.html
+++ b/allparks.html
@@ -65,9 +65,9 @@ div.c {
 <li>Ottawa County Fair - 2006</li>
 <li>Pleasure Pier - 2012, <a href="pp2020.html" style="color: #27F5CA;">2020</a></li>
 <li>Santa Cruz Beach Boardwalk - 2011</li>
-<li>SeaWorld San Antonio - 2004, 2008</li>
+<li>SeaWorld San Antonio - 2004, 2008, <a href="swsa21.html" style="color: #27F5CA;">2021</a></li>
 <li>Six Flags AstroWorld - 2005</li>
-<li>Six Flags Fiesta Texas - 2007, 2008, 2011, 2012, 2014</li>
+<li>Six Flags Fiesta Texas - 2007, 2008, 2011, 2012, 2014, <a href="sfft21.html" style="color: #27F5CA;">2021</a></li>
 <li>Six Flags Great America - <a href="sfgam2019.html" style="color: #27F5CA;">2019</a></li>
 <li>Six Flags Kentucky Kingdom - 2009</li>
 <li>Six Flags Magic Mountain - 2011</li>
@@ -75,6 +75,7 @@ div.c {
 <li>Six Flags Over Texas - 2006, 2007</li>
 <li>Thorpe Park - <a href="thorpe2018.html" style="color: #27F5CA;">2018</a></li>
 <li>Walt Disney World (all 4 parks) - 2006 </li>
+<li>ZDT's Amusement Park - <a href="zdts21.html" style="color: #27F5CA;">2021</a></li>
 
 </ul><br>
 </div>
