--- a/kemah2020.html
+++ b/kemah2020.html
@@ -66,7 +66,7 @@ div.c {
 <p>After doing some research, I opted to buy the Weekend Adventure Pass, which included unlimited admission and most attractions at Kemah, Pleasure Pier, and the Downtown Aquarium for a whole weekend. This pass was $43 with tax, and it was the perfect deal for my situation because <a href= "pp2020.html" style="color: #27F5CA;"> the next day I went to Pleasure Pier</a>. People can also buy all-day ride wristbands at Kemah each for $25 plus tax, although these regularly go on sale. Or, guests can pay per ride, ranging from $4-$6 for a ride included with the wristband/weekend pass. Lastly, if someone just wants to look around, take photos, use the restroom, etc., they can do so for free. Walking around the boardwalk costs nothing. I appreciate that Kemah offers these different options for different needs.</p>
 
 <br><h2>Photos</h2>
-<p>These photos were taken by me. Please credit this website if used.</p><center>
+<p>These photos were taken by me. Please credit this website if used. Check out the <a href="photos.html" style="color: #27F5CA;">photos page</a> for pictures of Kemah from 2014.</p></p><center>
 <img src="IMG_5661.jpg" width="306">
 <img src="IMG_5663.jpg" width="306">
 <img src="IMG_5665.jpg" width="306"></center>
