--- a/michigan2017.html
+++ b/michigan2017.html
@@ -68,7 +68,7 @@ div.c {
 <p>I did not get a chance to shop around for our Michigan's Adventure tickets as we only decided to go a day in advance. We bought the tickets online for around $50 per person and paid $20 for parking. Those are pretty standard Cedar Fair prices, but for the rides they had and Shivering Timbers being closed, I felt that we overpaid by at least $10 per person. At $70, our lunch was also very expensive, and we did not get a ton of food (or the correct food for that matter). The Thunderhawk ride photos were $22 total, and I paid $18 for the t-shirt and magnet combined.</p>
 
 <br><h2>Photos</h2>
-<p>These photos were taken by me. Please credit this website if used.</p><center>
+<p>These photos were taken by me. Please credit this website if used. Check out the <a href="photos.html" style="color: #27F5CA;">photos page</a> for pictures of Michigan's Adventure from 2008.</p></p><center>
 <img src="IMG_4712.jpg" width="306">
 <img src="IMG_4713.jpg" width="306">
 <img src="IMG_4719.jpg" width="306">
