--- a/top5021.html
+++ b/top5021.html
@@ -46,7 +46,7 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 28% of all coasters I've ridden.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 27% of all coasters I've ridden.</h3>
 
 
 <ol>
@@ -66,10 +66,11 @@ div.c {
 <li>Shivering Timbers - Michigan's Adventure</li>
 <li>Leviathan - Canada's Wonderland</li>
 <li>Copperhead Strike - Carowinds</li>
-<li>Iron Rattler - Six Flags Fiesta Texas</li>
+<li>Wonder Woman Golden Lasso Coaster - Six Flags Fiesta Texas</li>
 <li>Behemoth - Canada's Wonderland</li>
 <li>Storm Runner - Hersheypark</li>
 <li>Valravn - Cedar Point</li>
+<li>Iron Rattler - Six Flags Fiesta Texas</li>
 <li>Chang - Six Flags Kentucky Kingdom</li>
 <li>Scream! - Six Flags Magic Mountain</li>
 <li>Goliath - Six Flags Great America</li>
@@ -93,14 +94,18 @@ div.c {
 <li>Nighthawk - Carowinds</li>
 <li>Mystic Timbers - Kings Island </li>
 <li>Goliath - La Ronde</li>
+<li>Steel Eel - SeaWorld San Antonio</li>
 <li>Le Monstre - La Ronde</li>
 <li>Saw the Ride - Thorpe Park</li>
-<li>Vertical Velocity - Six Flags Great America </li>
-<li>Viper - Six Flags Great America</li>
 <li>B&M Batman clones - 6 parks</li>
+<li>Switchback - ZDT's Amusement Park</li>
+<li>Vertical Velocity - Six Flags Great America </li>
+
+
+<!--<li>Viper - Six Flags Great America</li>
 <li>Magnum XL-200 - Cedar Point</li>
 <li>Nemesis Inferno - Thorpe Park</li>
-<!--<li>Iron Shark - Pleasure Pier</li>
+<li>Iron Shark - Pleasure Pier</li>
 <li>Titan - Six Flags Over Texas & Goliath - Six Flags Magic Mountain </li>
 <li>Rock 'n' Roller Coaster - Walt Disney World (Disney's Hollywood Studios)</li>
 <li>Mind Bender - Six Flags Over Georgia</li>
