--- a/trips.html
+++ b/trips.html
@@ -46,7 +46,9 @@ div.c {
 
 <h3>Here you will find trip reports dating back to 2016.</h3>
 
-ZDT's, SeaWorld, and SFFT - COMING SOON!!!<br>
+<a href="sfft21.html" style="color: #27F5CA;">Six Flags Fiesta Texas 7/15/2021</a><br>
+<a href="swsa21.html" style="color: #27F5CA;">SeaWorld San Antonio 7/14/2021</a><br>
+<a href="zdts21.html" style="color: #27F5CA;">ZDT's Amusement Park 7/14/2021</a><br>
 <a href="carowinds21.html" style="color: #27F5CA;">Carowinds 6/28/2021-6/29/2021</a><br>
 <a href="ki2021.html" style="color: #27F5CA;">Kings Island 6/17/2021</a><br>
 <a href="pp2020.html" style="color: #27F5CA;">Pleasure Pier 9/19/2020</a><br>
