update summer trips and typos

--- a/carowinds21.html
+++ b/carowinds21.html
@@ -94,6 +94,7 @@ div.c {
 <img src="IMG_7225.JPG" width="306">
 
 <img src="IMG_7220.JPG" width="408">
+<img src="IMG_7232.JPG" width="408">
 <img src="IMG_7233.JPG" width="408">
 <img src="IMG_7228.JPG" width="408">
 <img src="IMG_7253.JPG" height="306">
