--- a/tips.html
+++ b/tips.html
@@ -65,7 +65,7 @@ div.c {
 <p>Depending on your circumstances, you might benefit from paying extra money to skip the lines at parks. I outline criteria that I use when determining whether I want to splurge <a href= "fastpass.html" style="color: #27F5CA;">here</a>. </p>
 
 <br><h3>7. Pace Yourself</h3>
-<p>Even I have ny limits. It's a good idea to take a break after riding 5 or so coasters in an hour (which only happens if the park you're visiting isn't busy or you skip the lines). Some activities that I do in between my coaster-riding sessions are eating/drinking, using the restroom, taking photographs/videos, sitting and resting my feet, riding less intense coasters or transportation rides, and shopping for merchandise. If I'm too ambitious with coasters early on, then I usually regret it later in the day, so I've learned to be realistic and take breaks often. </p>
+<p>Even I have my limits. It's a good idea to take a break after riding 5 or so coasters in an hour (which only happens if the park you're visiting isn't busy or you skip the lines). Some activities that I do in between my coaster-riding sessions are eating/drinking, using the restroom, taking photographs/videos, sitting and resting my feet, riding less intense coasters or transportation rides, and shopping for merchandise. If I'm too ambitious with coasters early on, then I usually regret it later in the day, so I've learned to be realistic and take breaks often. </p>
 
 <br><h3>8. Avoid Visiting on Summer Weekends or Holidays</h3>
 <p>This tip might be too obvious. When possible, I schedule my visits outside of holidays and summer weekends, which are typically the busiest days at amusement parks. </p>
