another zdt update

--- a/zdts21.html
+++ b/zdts21.html
@@ -54,13 +54,13 @@ div.c {
 <p>The Gravity Group's Switchback is such an awesome coaster! It's small but mighty, and in many ways it feels like the little brother of Boardwalk Bullet at Kemah. Switchback has an excellent drop that delivers ejector airtime until the bottom in every row I rode. The forward pass gives airtime in all expected spots. I really like the overbanks and near misses. The vertical rollback is a little disappointing, especially in the front. This element on Switchback does not provide near the thrills that taller rollbacks on steel coasters do. Going backwards isn't quite as fun as the forwards trip due to less airtime and not being able to see the direction of the track. However, the backwards trip makes the ride feel more complete and still has enough speed to satisfy me. Overall, I'm very impressed by the layout, creativity, added effect of traveling through and around buildings, and the concept of  this wooden shuttle coaster. Switchback is very smooth and comfy. For me, it's a back row ride that was running great after a storm during my visit. As of 2021, it even sneaks into my <a href= "top5021.html" style="color: #27F5CA;"> Top 50 Coasters</a>!</p>
 
 <br><h2>Other Rides</h2>
-<p>ZDT's has a nice collection of other attractions, including water rides, go-karts, flat rides, and arcade games. Since my friend and I were just stopping on our way to SeaWorld, we did not ride/participate in any activities other than eating and riding Switchback. </p>
+<p>ZDT's has a nice collection of other attractions, including water rides, go-karts, flat rides, playgrounds, and arcade games. Since my friend and I were just stopping on our way to SeaWorld, we did not ride anything other than Switchback or participate in any activities except eating. </p>
 
 <br><h2>Food & Merchandise</h2>
-<p>I had the grilled chicken sandwich combo for lunch. The food was yummy, fresh, and just the right portion. ZDT's had merchandise, but I did not purchase anything.</p>
+<p>I had the grilled chicken sandwich combo for lunch. The food was yummy, fresh, and just the right portion size. ZDT's had merchandise, but I did not purchase anything.</p>
 
 <br><h2>Cost</h2>
-<p>It cost $19 for a Switchback wristband - good for unlimited rides on only the coaster for one day. ZDT's offers other passes, admission options and wristbands for all sorts of needs, detailed on <a href= "https://www.zdtamusement.com/products/unlimitedwristband" style ="color: #27F5CA;"> their website</a>. My lunch cost $10. I thought these prices were reasonable.</p>
+<p>It cost $19 for a Switchback wristband - good for unlimited rides on just the coaster for one day. ZDT's offers other passes, admission options and wristbands for all sorts of needs, detailed on <a href= "https://www.zdtamusement.com/products/unlimitedwristband" style ="color: #27F5CA;">their website</a>. My lunch cost $10. I thought these prices were reasonable.</p>
 
 <br><h2>Photos</h2>
 <p>These photos were taken by me. Please credit this website if used.</p><center>
