add new other pages

--- a/other.html
+++ b/other.html
@@ -50,6 +50,9 @@ div.c {
 <a href="tips.html" style="color: #27F5CA;">Tips for Visiting Amusement Parks</a><br>
 <a href="fastpass.html" style="color: #27F5CA;">To Skip or Not to Skip the Lines</a><br>
 <a href="allparks.html" style="color: #27F5CA;">Every Park I've Visited</a><br>
+<a href="topsteel.html" style="color: #27F5CA;">Every Steel Coaster to Hold my #1 Spot</a><br>
+<a href="topwood.html" style="color: #27F5CA;">Every Wooden Coaster to Hold my #1 Spot</a><br>
+
 <a href="acknowledgements.html" style="color: #27F5CA;">Acknowledgements</a><br>
 
 </div>
