--- a/vegas2017.html
+++ b/vegas2017.html
@@ -52,17 +52,17 @@ div.c {
 <p>I had the chance to visit the New York-New York Hotel & Casino and ride the coaster with my mom once around 11AM on a sunny day. There was no line. The station, trains, and scenery looked exactly as they did in 2011. </p>
 
 <br><h2>Coaster</h2>
-<p>I'll start with the pros of Big Apple Coaster. The first 2 drops were pleasant, and the coaster reached nearly 70mph (although the pacing was lousy). I also enjoyed the two inversions on this coaster, and the dive loop had good hangtime. The setting along the Las Vegas Strip was really neat too. It was fun to zoom by "skyscrapers" and Lady Liberty. This coaster is one of the most iconic ones in the world. Now I'll dive into the negatives. The restraints for this ride are awful. Specifically, the shoulder bars were bothersome to my neck and shoulders throughout the ride. Janky track profiling exacerbated the effects of the shoddy restraints. Perhaps the worst part of the ride was the series of bunny hops towards the end. These hills were way less comfortable than I recalled from my ride six years prior. All in all, this Togo coaster is unique and I think every coaster fan should ride it at least once to form their own opinion. While I no longer think of this coaster favorably, I also don't consider it to be trash. It's below average, especially when compared to newer rides, but I don't think it's as bad as many other enthusiasts make it out to be. The next time I'm back on the Vegas Strip I'll probably give Big Apple Coaster another chance. I also hope to get out to Adventuredome, which is only 3 miles away.</p>
+<p>I'll start with the pros of Big Apple Coaster. The first 2 drops were pleasant, and the coaster reached nearly 70mph (although the pacing was lousy). I also enjoyed the two inversions on this coaster, and the dive loop had good hangtime. The setting along the Las Vegas Strip was really neat too. It was fun to zoom by "skyscrapers" and Lady Liberty. This coaster is one of the most iconic ones in the world. Now I'll dive into the negatives. The restraints for this ride were awful. Specifically, the shoulder bars were bothersome to my neck and shoulders throughout the ride. Janky track profiling exacerbated the effects of the shoddy restraints. Perhaps the worst part of the ride was the series of bunny hops towards the end. These hills were way less comfortable than I recalled from my ride six years prior. All in all, this Togo coaster is unique and I think every coaster fan should ride it at least once to form their own opinion. While I no longer think of this coaster favorably, I also don't consider it to be trash. It's below average, especially when compared to newer rides, but I don't think it's as bad as many other enthusiasts make it out to be. The next time I'm back on the Vegas Strip I'll probably give Big Apple Coaster another chance. I also hope to get out to Adventuredome, which is only 3 miles away.</p>
 
 
 <br><h2>Food & Merchandise</h2>
 <p>The New York-New York Hotel & Casino contains a plethora of indoor restaurants, and a gift shop for the Big Apple Coaster which riders will walk through after riding. However, I have not purchased any food or merchandise from here. </p>
 
 <br><h2>Cost</h2>
-<p>In 2011, one ride on this coaster cost $9 per rider. The price had increased to $15 by 2017. Discounts are offered for hotel guests and re-rides. I think $15 is steep to ride a subpar coaster once, but as a silver lining, it keeps the line short to nonexistent.</p>
+<p>In 2011, one ride on this coaster cost $9 per rider. The price had increased to $15 by 2017. Discounts were offered for hotel guests and re-rides. I thought $15 was steep to ride a subpar coaster once, but as a silver lining, it kept the line short to nonexistent.</p>
 
 <br><h2>Photos</h2>
-<p>These photos were taken by me a couple days after I rode Big Apple Coaster. Please credit this website if used.</p><br>
+<p>These photos were taken by me a couple days after I rode Big Apple Coaster. Please credit this website if used.</p>
 <center>
 <img src="IMG_3258.jpg" width="306">
 <img src="IMG_1388.jpg" height="408"></center>
