add SFOT trip and update website

--- a/rankings.html
+++ b/rankings.html
@@ -47,7 +47,8 @@ div.c {
 
 <h3>Here you will find information about my favorite/least favorite roller coasters and amusement parks.</h3>
 
-<a href="top5021.html" style="color: #27F5CA;">Current Top 50 Roller Coasters</a><br>
+<a href="top5022.html" style="color: #27F5CA;">Current Top 50 Roller Coasters</a><br>
+<a href="top5021.html" style="color: #27F5CA;">Top 50 Roller Coasters (2021)</a><br>
 <a href="top50.html" style="color: #27F5CA;">Top 50 Roller Coasters (2020)</a><br>
 <a href="worstcoasters.html" style="color: #27F5CA;">The Worst Coasters I've Ridden</a><br>
 <a href="howirank.html" style="color: #27F5CA;">How I Rank Roller Coasters</a><br>
