--- a/top5022.html
+++ b/top5022.html
@@ -14,7 +14,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Erin's Top 50 Coasters (2021)</title>
+<title>Erin's Top 50 Coasters</title>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 <style>
 div {
@@ -46,7 +46,7 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 27% of all coasters I've ridden. ***This page is outdated. To see my current list of top coasters, click <a href= "top5022.html" style="color: #27F5CA;">here</a>.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 27% of all coasters I've ridden.</h3>
 
 
 <ol>
@@ -68,6 +68,7 @@ div.c {
 <li>Copperhead Strike - Carowinds</li>
 <li>Wonder Woman Golden Lasso Coaster - Six Flags Fiesta Texas</li>
 <li>Behemoth - Canada's Wonderland</li>
+<li>New Texas Giant - Six Flags Over Texas</li>
 <li>Storm Runner - Hersheypark</li>
 <li>Valravn - Cedar Point</li>
 <li>Iron Rattler - Six Flags Fiesta Texas</li>
@@ -76,6 +77,7 @@ div.c {
 <li>Goliath - Six Flags Great America</li>
 <li>Riddler's Revenge - Six Flags Magic Mountain</li>
 <li>Boardwalk Bullet - Kemah Boardwalk</li>
+<li>Mr. Freeze Reverse Blast - Six Flags Over Texas</li>
 <li>Intimidator - Carowinds</li>
 <li>X-Flight - Six Flags Great America</li>
 <li>The Swarm - Thorpe Park</li>
@@ -93,16 +95,15 @@ div.c {
 <li>Deja Vu - Six Flags Magic Mountain</li>
 <li>Nighthawk - Carowinds</li>
 <li>Mystic Timbers - Kings Island </li>
+<li>B&M Batman clones - 7 parks</li>
 <li>Goliath - La Ronde</li>
 <li>Steel Eel - SeaWorld San Antonio</li>
 <li>Le Monstre - La Ronde</li>
 <li>Saw the Ride - Thorpe Park</li>
-<li>B&M Batman clones - 6 parks</li>
-<li>Switchback - ZDT's Amusement Park</li>
+
+<!--<li>Switchback - ZDT's Amusement Park</li>
 <li>Vertical Velocity - Six Flags Great America </li>
-
-
-<!--<li>Viper - Six Flags Great America</li>
+<li>Viper - Six Flags Great America</li>
 <li>Magnum XL-200 - Cedar Point</li>
 <li>Nemesis Inferno - Thorpe Park</li>
 <li>Iron Shark - Pleasure Pier</li>
