--- a/allparks.html
+++ b/allparks.html
@@ -72,7 +72,7 @@ div.c {
 <li>Six Flags Kentucky Kingdom - 2009</li>
 <li>Six Flags Magic Mountain - 2011</li>
 <li>Six Flags Over Georgia - 2010</li>
-<li>Six Flags Over Texas - 2006, 2007</li>
+<li>Six Flags Over Texas - 2006, 2007, <a href="sfot22.html" style="color: #27F5CA;">2022</a></li>
 <li>Thorpe Park - <a href="thorpe2018.html" style="color: #27F5CA;">2018</a></li>
 <li>Walt Disney World (all 4 parks) - 2006 </li>
 <li>ZDT's Amusement Park - <a href="zdts21.html" style="color: #27F5CA;">2021</a></li>
