--- a/allparks.html
+++ b/allparks.html
@@ -50,6 +50,7 @@ div.c {
 
 
 <ul>
+<li>Big Rivers Waterpark & Adventures - <a href="br22.html" style="color: #27F5CA;">2022</a></li> 
 <li>Canada's Wonderland - 2012 </li>
 <li>Carowinds - <a href="carowinds21.html" style="color: #27F5CA;">2021</a></li>
 <li>Cedar Point - 2009, <a href="cp2019.html" style="color: #27F5CA;">2019</a> </li>
