fix broken image links

--- a/br22.html
+++ b/br22.html
@@ -73,9 +73,9 @@ div.c {
 <center>
 <img src="IMG_8329.JPG" height="306">
 <img src="IMG_8330.JPG" height="306">
-<img src="IMG_8331.jpg" height="306">
-<img src="IMG_8332.jpg" height="306">
-<img src="IMG_8335.jpg" height="306">
+<img src="IMG_8331.JPG" height="306">
+<img src="IMG_8332.JPG" height="306">
+<img src="IMG_8335.JPG" height="306">
 
 </center>
 
