--- a/allparks.html
+++ b/allparks.html
@@ -51,21 +51,27 @@ div.c {
 
 <ul>
 <li>Big Rivers Waterpark & Adventures - <a href="br22.html" style="color: #27F5CA;">2022</a></li> 
+<li>Busch Gardens Tampa - <a href="bgt22.html" style="color: #27F5CA;">2022</a></li>
 <li>Canada's Wonderland - 2012 </li>
 <li>Carowinds - <a href="carowinds21.html" style="color: #27F5CA;">2021</a></li>
 <li>Cedar Point - 2009, <a href="cp2019.html" style="color: #27F5CA;">2019</a> </li>
+<li>Fun Spot Kissimmee - <a href="fsk22.html" style="color: #27F5CA;">2022</a></li>
+<li>Fun Spot Orlando - <a href="fso22.html" style="color: #27F5CA;">2022</a></li>
 <li>Geauga Lake - 2005 </li>
 <li>Hersheypark - 2010</li>
 <li>Houston Rodeo - 2009 </li>
 <li>Kemah Boardwalk - 2007, 2014, <a href="kemah2020.html" style="color: #27F5CA;">2020</a></li>
 <li>Kings Island - <a href="ki2021.html" style="color: #27F5CA;">2021</a></li>
 <li>La Ronde - <a href="laronde2016.html" style="color: #27F5CA;">2016</a></li>
+<li>Legoland Florida - <a href="lego22.html" style="color: #27F5CA;">2022</a></li>
 <li>Michigan's Adventure - 2008, <a href="michigan2017.html" style="color: #27F5CA;">2017</a></li>
 <li>Montgomery County Fair - 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014</li>
 <li>New York New York Hotel & Casino - 2011, <a href="vegas2017.html" style="color: #27F5CA;">2017</a></li>
 <li>Ottawa County Fair - 2006</li>
+<li>Peppa Pig Theme Park - <a href="pp22.html" style="color: #27F5CA;">2022</a></li>
 <li>Pleasure Pier - 2012, <a href="pp2020.html" style="color: #27F5CA;">2020</a></li>
 <li>Santa Cruz Beach Boardwalk - 2011</li>
+<li>SeaWorld Orlando - <a href="swo22.html" style="color: #27F5CA;">2022</a></li>
 <li>SeaWorld San Antonio - 2004, 2008, <a href="swsa21.html" style="color: #27F5CA;">2021</a></li>
 <li>Six Flags AstroWorld - 2005</li>
 <li>Six Flags Fiesta Texas - 2007, 2008, 2011, 2012, 2014, <a href="sfft21.html" style="color: #27F5CA;">2021</a></li>
@@ -75,7 +81,12 @@ div.c {
 <li>Six Flags Over Georgia - 2010</li>
 <li>Six Flags Over Texas - 2006, 2007, <a href="sfot22.html" style="color: #27F5CA;">2022</a></li>
 <li>Thorpe Park - <a href="thorpe2018.html" style="color: #27F5CA;">2018</a></li>
-<li>Walt Disney World (all 4 parks) - 2006 </li>
+<li>Universal Studios Florida - <a href="usf22.html" style="color: #27F5CA;">2022</a></li>
+<li>Universal's Islands of Adventure - <a href="ioa22.html" style="color: #27F5CA;">2022</a></li>
+<li>Walt Disney World - Disney's Animal Kingdom - 2006 </li>
+<li>Walt Disney World - Disney's Hollywood Studios - 2006, <a href="dhs22.html" style="color: #27F5CA;">2022</a></li>
+<li>Walt Disney World - Epcot - 2006, <a href="epcot22.html" style="color: #27F5CA;">2022</a></li>
+<li>Walt Disney World - Magic Kingdom - 2006, <a href="mk22.html" style="color: #27F5CA;">2022</a></li>
 <li>ZDT's Amusement Park - <a href="zdts21.html" style="color: #27F5CA;">2021</a></li>
 
 </ul><br>
