--- a/top5022.html
+++ b/top5022.html
@@ -46,21 +46,27 @@ div.c {
 <a href="other.html" style="color: #27F5CA;">Other Links</a>
 </center></nav></div><br>
 
-<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 27% of all coasters I've ridden.</h3>
+<h3>These are my favorite 50 roller coasters thus far, accounting for roughly 22% of all coasters I've ridden.</h3>
 
 
 <ol>
 <li>Fury 325 - Carowinds </li>
 <li>Millennium Force - Cedar Point </li>
+<li>Iron Gwazi - Busch Gardens Tampa </li>
 <li>Top Thrill Dragster - Cedar Point </li>
 <li>Steel Vengeance - Cedar Point </li>
+<li>Velocicoaster - Universal's Islands of Adventure</li>
+<li>Kumba - Busch Gardens Tampa</li>
 <li>Superman Krypton Coaster - Six Flags Fiesta Texas </li>
 <li>Orion - Kings Island </li>
 <li>Raging Bull - Six Flags Great America </li>
+<li>Montu - Busch Gardens Tampa </li>
+<li>Mako - SeaWorld Orlando </li>
 <li>Banshee - Kings Island </li>
 <li>Tatsu - Six Flags Magic Mountain </li>
 <li>GateKeeper - Cedar Point </li>
 <li>The Beast - Kings Island </li>
+<li>Manta - SeaWorld Orlando </li>
 <li>Goliath - Six Flags Over Georgia</li>
 <li>Maxx Force - Six Flags Great America</li>
 <li>Shivering Timbers - Michigan's Adventure</li>
@@ -69,15 +75,19 @@ div.c {
 <li>Wonder Woman Golden Lasso Coaster - Six Flags Fiesta Texas</li>
 <li>Behemoth - Canada's Wonderland</li>
 <li>New Texas Giant - Six Flags Over Texas</li>
+<li>Hagrid's Magical Creatures Motorbike Adventure - Universal's Islands of Adventure </li>
 <li>Storm Runner - Hersheypark</li>
 <li>Valravn - Cedar Point</li>
 <li>Iron Rattler - Six Flags Fiesta Texas</li>
+<li>Incredible Hulk - Universal's Islands of Adventure </li>
 <li>Chang - Six Flags Kentucky Kingdom</li>
 <li>Scream! - Six Flags Magic Mountain</li>
 <li>Goliath - Six Flags Great America</li>
+<li>Kraken - SeaWorld Orlando </li>
 <li>Riddler's Revenge - Six Flags Magic Mountain</li>
 <li>Boardwalk Bullet - Kemah Boardwalk</li>
 <li>Mr. Freeze Reverse Blast - Six Flags Over Texas</li>
+<li>Cheetah Hunt - Busch Gardens Tampa </li>
 <li>Intimidator - Carowinds</li>
 <li>X-Flight - Six Flags Great America</li>
 <li>The Swarm - Thorpe Park</li>
@@ -90,7 +100,7 @@ div.c {
 <li>Raptor - Cedar Point</li>
 <li>Great Bear - Hersheypark</li>
 <li>Fahrenheit - Hersheypark</li>
-<li>Maverick - Cedar Point</li>
+<!--<li>Maverick - Cedar Point</li>
 <li>Superman Ultimate Flight - 2 parks </li>
 <li>Deja Vu - Six Flags Magic Mountain</li>
 <li>Nighthawk - Carowinds</li>
@@ -100,8 +110,7 @@ div.c {
 <li>Steel Eel - SeaWorld San Antonio</li>
 <li>Le Monstre - La Ronde</li>
 <li>Saw the Ride - Thorpe Park</li>
-
-<!--<li>Switchback - ZDT's Amusement Park</li>
+<li>Switchback - ZDT's Amusement Park</li>
 <li>Vertical Velocity - Six Flags Great America </li>
 <li>Viper - Six Flags Great America</li>
 <li>Magnum XL-200 - Cedar Point</li>
