--- a/topparks21.html
+++ b/topparks21.html
@@ -51,15 +51,17 @@ div.c {
 <ol>
 <li>Cedar Point (2019) </li>
 <li>Kings Island (2021) </li>
+<li>Busch Gardens Tampa (2022) </li>
 <li>Six Flags Magic Mountain (2011) </li>
 <li>Six Flags Great America (2019) </li>
 <li>Carowinds (2021) </li>
+<li>Universal's Islands of Adventure </li>
 <li>Hersheypark (2010) </li>
 <li>Six Flags Fiesta Texas (2021)</li>
 <li>Six Flags Over Georgia (2010) </li>
-<li>Six Flags Over Texas (2022) </li>
+<!--<li>Six Flags Over Texas (2022) </li>
 <li>Canada's Wonderland (2012)</li>
-<!--<li>Thorpe Park (2018) </li>-->
+<li>Thorpe Park (2018) </li>-->
 
 </ol>
 
